--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "audioWebWhatsApp",
+    "name": "ChangeAudioSpeed",
     "version": "0.1",
     "content_scripts": [
         {
